--- a/okteto-stack.yaml
+++ b/okteto-stack.yaml
@@ -5,7 +5,7 @@ services:
       API_ID: $API_ID  
       API_HASH: $API_HASH  
       BOT_TOKEN: $BOT_TOKEN 
-      AUTH: $AUTH
+      ADMINS: $ADMINS
       FORCESUB: $FORCESUB
     ports:
       - 8080
