--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.3"
+version: "3.10"
 
 services:
   app:
@@ -9,6 +9,9 @@ services:
       API_ID: # Your API HASH from my.telegram.org
       API_HASH: # Your API ID from my.telegram.org
       BOT_TOKEN: # Bot token, get it from @BotFather 
-      SESSION: # Pyrogram string session
-      AUTH: # User ID of Bot owner
-      FORCESUB: # Username name of public channel without using '@'
+      ADMINS: #ADMINS
+      CHANNELS: #CHANNELS
+      AUTH_CHANNEL: #AUTH_CHANNEL
+      AUTH_USERS: #AUTH_USERS
+      DATABASE_URI: #DATABASE_URI
+      LOG_CHANNEL: #LOG_CHANNEL
